--- a/frontend/src/components/NotificationButton/styles.css
+++ b/frontend/src/components/NotificationButton/styles.css
@@ -1,7 +1,5 @@
-
-
 .notification-button {
-    color:brown;
-    background-color: blanchedalmond;
-    font-size: 18px
+  color: brown;
+  background-color: blanchedalmond;
+  font-size: 18px;
 }
