Include medias breakpoints

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 
-* {
+/* * {
   font-family: 'Roboto', sans-serif;
   box-sizing: border-box;
   margin: 0;
@@ -139,7 +139,7 @@ header {
 .dsmeta-red-btn img {
   width: 19px;
 }
-
+ */
 .show576 {
   display: none;
 }
